--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "framer-motion": "^12.15.0",
     "next": "^14.2.29",
     "react": "^18",
@@ -17,6 +18,7 @@
     "resend": "^4.6.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
