--- a/src/app/data/projects.json
+++ b/src/app/data/projects.json
@@ -7,7 +7,7 @@
         "url": "https://password-strength-meter-by-huzaifa.streamlit.app/"
         },
         "description": "Developed a password strength meter which check whether the given password is strong or not. Also, generates the strong password",
-        "languageIcons": ["js_icon.png", "css_icon.png", "html_icon.png"]
+        "languageIcon": ["js_icon.png", "css_icon.png", "html_icon.png"]
     },
     {
         "thumbnail": "/unit-converter.png",
@@ -17,7 +17,7 @@
         "url": "https://unit-converter-by-huzaifa.streamlit.app/"
         },
         "description": "Developed a unit converter app with streamlit and python. This app converts many units",
-        "languageIcons": ["js_icon.png", "css_icon.png", "html_icon.png"]
+        "languageIcon": ["js_icon.png", "css_icon.png", "html_icon.png"]
     },
     {
         "thumbnail": "/data-encryption.jpg",
@@ -27,7 +27,7 @@
         "url": "https://secure-data-encrypt.streamlit.app/"
         },
         "description": "Developed a secure data encryption app which allows to registan an account, login, store data, and you can retrieve your data by your secret key",
-        "languageIcons": ["js_icon.png", "css_icon.png", "html_icon.png"]
+        "languageIcon": ["js_icon.png", "css_icon.png", "html_icon.png"]
     },
     {
         "thumbnail": "/Weather_Thumbnail.png",
@@ -37,6 +37,6 @@
         "url": "www.example.com"
         },
         "description": "Developed a weather dashboard which fetches data from a real-time API.",
-        "languageIcons": ["js_icon.png", "css_icon.png", "html_icon.png"]
+        "languageIcon": ["js_icon.png", "css_icon.png", "html_icon.png"]
     }
 ]
