--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
     "resend": "^4.6.0"
   },
   "devDependencies": {
